# docker-sqlite-cmake-builder

./: CMakeLists.txt  Dockerfile  README.md  Readme.txt  Логи сборки.txt
